--- a/.env-backend-acme
+++ b/.env-backend-acme
@@ -1,6 +1,6 @@
 BACKEND_HOST=api.superzap.me
 FRONTEND_HOST=chat.superzap.me
-EMAIL_ADDRESS=contato@rapiburguerbes.com
+EMAIL_ADDRESS=jbtonelli@gmail.com
 
 RECAPTCHA_SECRET_KEY=
 
