--- a/.env-frontend-acme
+++ b/.env-frontend-acme
@@ -1,5 +1,5 @@
 FRONTEND_HOST=chat.superzap.me
-EMAIL_ADDRESS=contato.rapiburguerbes.com
+EMAIL_ADDRESS=jbtonelli@gmail.com
 
 BACKEND_HOST=api.superzap.me
 
